Refactored package name and resolved code smell